add/list users and cakedays

--- a/src/mergecake/views/templates/base.html
+++ b/src/mergecake/views/templates/base.html
@@ -24,6 +24,9 @@
           <ul class="nav navbar-nav">
             <li class="{{home-selected}}"><a href="{{servlet-context}}/">Home</a></li>
             <li class="{{register-selected}}"><a href="{{servlet-context}}/register">Register cakeday</a></li>
+            <li class="{{add-users-selected}}"><a href="{{servlet-context}}/add-user">Add users</a></li>
+            <li class="{{list-users-selected}}"><a href="{{servlet-context}}/list-users">List users</a></li>
+            <li class="{{list-cakedays-selected}}"><a href="{{servlet-context}}/list-cakedays">List cakedays</a></li>
           </ul>
         </div>
       </div>
