--- a/src/mergecake/views/templates/add-user.html
+++ b/src/mergecake/views/templates/add-user.html
@@ -6,42 +6,33 @@
 <legend>Add a new user</legend>
 
 <div class="form-group">
-  <label class="col-md-4 control-label" for="first-name">First name</label>
+  <label class="col-md-4 control-label" for="first_name">First name</label>
   <div class="col-md-2">
-    <input type="text" class="form-control" id="first-name" name="first-name"/>
+    <input type="text" class="form-control" id="first_name" name="first_name"/>
   </div>
 </div>
 
 <div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">Which day will you be bringing a treat?</label>
+  <label class="col-md-4 control-label" for="last_name">Last name</label>
   <div class="col-md-2">
-    <input type="text" class="form-control" id="date" name="date" value="02-16-2012"></input>
+    <input type="text" class="form-control" id="last_name" name="last_name"></input>
   </div>
 </div>
 
 <div class="form-group">
-  <label class="col-md-4 control-label" for="textarea">Describe what you will be bringing (will be included in the e-mail to your project team)</label>
-  <div class="col-md-4">
-    <textarea class="form-control" id="description" name="description"></textarea>
+  <label class="col-md-4 control-label" for="initials">Initials</label>
+  <div class="col-md-2">
+    <input type="text" class="form-control" id="initials" name="initials"></input>
   </div>
 </div>
 
 <div class="form-group">
   <div class="col-md-4 pull-right col-md-pull-1">
-    <button type="submit" id="submitbutton" name="submitbutton" class="btn btn-primary">Submit</button>
+    <button type="submit" id="submitbutton" class="btn btn-primary">Submit</button>
   </div>
 </div>
 
 </fieldset>
 </form>
 {{message}}
-{% style "/css/datepicker.css" %}
-{% script "/js/bootstrap-datepicker.js" %}
-<script type="text/javascript">
-$(function(){
-  $('#date').datepicker({
-    format: 'dd-mm-yyyy'
-  });
-});
-</script>
 {% endblock %}
