replace first/last name columns in user table with a combined name column

--- a/src/mergecake/views/templates/list-cakedays.html
+++ b/src/mergecake/views/templates/list-cakedays.html
@@ -2,7 +2,7 @@
 {% block content %}
 {{message}}
 {% for day in cakedays %}
-<p>{{day.first_name}} {{day.last_name}} -- {{day.initials}}<br/>
+<p>{{day.name}} -- {{day.initials}}<br/>
 {{day.date}} {{day.description}} <a href="/cakedays/delete/{{day.id}}">Delete</a></p>
 {% endfor %}
 {% endblock %}
