--- a/src/mergecake/views/templates/add-user.html
+++ b/src/mergecake/views/templates/add-user.html
@@ -6,16 +6,9 @@
 <legend>Add a new user</legend>
 
 <div class="form-group">
-  <label class="col-md-4 control-label" for="first_name">First name</label>
-  <div class="col-md-2">
-    <input type="text" class="form-control" id="first_name" name="first_name"/>
-  </div>
-</div>
-
-<div class="form-group">
-  <label class="col-md-4 control-label" for="last_name">Last name</label>
-  <div class="col-md-2">
-    <input type="text" class="form-control" id="last_name" name="last_name"></input>
+  <label class="col-md-4 control-label" for="uname">Name</label>
+  <div class="col-md-4">
+    <input type="text" class="form-control" id="uname" name="uname"/>
   </div>
 </div>
 
