--- a/src/mergecake/views/templates/base.html
+++ b/src/mergecake/views/templates/base.html
@@ -26,6 +26,8 @@
             <li class="{{add-users-selected}}"><a href="{{servlet-context}}/add-user">Add users</a></li>
             <li class="{{list-users-selected}}"><a href="{{servlet-context}}/list-users">List users</a></li>
             <li class="{{list-cakedays-selected}}"><a href="{{servlet-context}}/list-cakedays">List cakedays</a></li>
+            <li class="{{add-projects-selected}}"><a href="{{servlet-context}}/add-project">Add project</a></li>
+            <li class="{{list-projects-selected}}"><a href="{{servlet-context}}/list-projects">List projects</a></li>
           </ul>
         </div>
       </div>
