--- a/src/mergecake/views/templates/base.html
+++ b/src/mergecake/views/templates/base.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Welcome to mergecake</title>
-    <!-- scripts and styles -->
-    {% style "/css/bootstrap-theme.min.css" %}
-    {% style "/css/bootstrap.min.css" %}
-    {% style "/css/screen.css" %}
-    <script src="//code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-    {% script "/js/bootstrap.min.js" %}
-    <script type="text/javascript">
-      var context = "{{servlet-context}}";
-    </script>
-  </head>
-  <body>
-    <!-- navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{{servlet-context}}/">mergecake</a>
-        </div>
-        <div class="navbar-collapse collapse ">
-          <ul class="nav navbar-nav">
-            <li class="{{home-selected}}"><a href="{{servlet-context}}/">Home</a></li>
-            <li class="{{add-users-selected}}"><a href="{{servlet-context}}/add-user">Add users</a></li>
-            <li class="{{list-users-selected}}"><a href="{{servlet-context}}/list-users">List users</a></li>
-            <li class="{{list-cakedays-selected}}"><a href="{{servlet-context}}/list-cakedays">List cakedays</a></li>
-            <li class="{{add-projects-selected}}"><a href="{{servlet-context}}/add-project">Add project</a></li>
-            <li class="{{list-projects-selected}}"><a href="{{servlet-context}}/list-projects">List projects</a></li>
-          </ul>
-        </div>
+<head>
+  <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Welcome to mergecake</title>
+  <!-- scripts and styles -->
+  {% style "/css/bootstrap-theme.min.css" %} 
+  {% style "/css/bootstrap.min.css" %} 
+  {% style "/css/screen.css" %}
+  <script src="//code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
+  {% script "/js/bootstrap.min.js" %}
+  <script type="text/javascript">
+  	var context = "{{servlet-context}}";
+  </script>
+</head>
+<body>
+  <!-- navbar -->
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="{{servlet-context}}/">mergecake</a>
+      </div>
+      <div class="navbar-collapse collapse ">
+        <ul class="nav navbar-nav">
+          <li class="{{home-selected}}"><a
+            href="{{servlet-context}}/">Home</a></li>
+          <li class="{{add-users-selected}}"><a
+            href="{{servlet-context}}/add-user">Add users</a></li>
+          <li class="{{list-users-selected}}"><a
+            href="{{servlet-context}}/list-users">List users</a></li>
+          <li class="{{list-cakedays-selected}}"><a
+            href="{{servlet-context}}/list-cakedays">List cakedays</a></li>
+          <li class="{{add-projects-selected}}"><a
+            href="{{servlet-context}}/add-project">Add project</a></li>
+          <li class="{{list-projects-selected}}"><a
+            href="{{servlet-context}}/list-projects">List projects</a></li>
+        </ul>
       </div>
     </div>
+  </div>
 
-    <div class="container">
-      {% block content %}
-      {% endblock %}
-    </div>
-  </body>
+  <div class="container">{% block content %} {% endblock %}</div>
+</body>
 </html>
 
