--- a/src/mergecake/views/templates/register.html
+++ b/src/mergecake/views/templates/register.html
@@ -1,61 +1,67 @@
 {% extends "mergecake/views/templates/cakeday-base.html" %}
 {% block cakeday-content %}
 <h1>Register a cakeday</h1>
-<form class="form-horizontal" action="{{servlet-context}}/submit-cakeday" method="POST">
-<fieldset>
+<form class="form-horizontal"
+  action="{{servlet-context}}/submit-cakeday" method="POST">
+  <fieldset>
 
-<div class="form-group">
-  <label class="col-md-4 control-label" for="project">Select project</label>
-  <div class="col-md-2">
-    <select id="proj" name="proj" class="form-control">
-      {% for proj in projects %}
-        <option value="{{proj.id}}">{{proj.projectname}}</option>
-      {% endfor %}
-    </select>
-  </div>
-</div>
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="project">Select
+        project</label>
+      <div class="col-md-2">
+        <select id="proj" name="proj" class="form-control"> 
+          {% for proj in projects %}
+            <option value="{{proj.id}}">{{proj.projectname}}</option> 
+          {% endfor %}
+        </select>
+      </div>
+    </div>
 
-<div class="form-group">
-  <label class="col-md-4 control-label" for="user">Select your initials</label>
-  <div class="col-md-2">
-    <select id="user" name="user" class="form-control">
-      {% for user in users %}
-        <option value="{{user.id}}">{{user.initials}}</option>
-      {% endfor %}
-    </select>
-  </div>
-</div>
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="user">Select
+        your initials</label>
+      <div class="col-md-2">
+        <select id="user" name="user" class="form-control"> 
+          {% for user in users %}
+            <option value="{{user.id}}">{{user.initials}}</option> 
+          {% endfor %}
+        </select>
+      </div>
+    </div>
 
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">Which day will you be bringing a treat?</label>
-  <div class="col-md-2">
-    <input type="text" class="form-control" id="date" name="date" value="02-16-2012"></input>
-  </div>
-</div>
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="textinput">Which day will you be bringing a treat?</label>
+      <div class="col-md-2">
+        <input type="text" class="form-control" id="date" name="date"
+          value="02-16-2012"></input>
+      </div>
+    </div>
 
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textarea">Comment (will be included in e-mail)</label>
-  <div class="col-md-4">
-    <textarea class="form-control" id="description" name="description"></textarea>
-  </div>
-</div>
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="textarea">Comment (will be included in e-mail)</label>
+      <div class="col-md-4">
+        <textarea class="form-control" id="description"
+          name="description"></textarea>
+      </div>
+    </div>
 
-<div class="form-group">
-  <div class="col-md-4 pull-right col-md-pull-1">
-    <button type="submit" id="submitbutton" name="submitbutton" class="btn btn-primary">Submit</button>
-  </div>
-</div>
+    <div class="form-group">
+      <div class="col-md-4 pull-right col-md-pull-1">
+        <button type="submit" id="submitbutton" name="submitbutton"
+          class="btn btn-primary">Submit</button>
+      </div>
+    </div>
 
-</fieldset>
+  </fieldset>
 </form>
 {{message}}
 {% style "/css/datepicker.css" %}
 {% script "/js/bootstrap-datepicker.js" %}
 <script type="text/javascript">
-$(function(){
-  $('#date').datepicker({
-    format: 'dd-mm-yyyy'
-  });
-});
+	$(function() {
+		$('#date').datepicker({
+			format : 'dd-mm-yyyy'
+		});
+	});
 </script>
 {% endblock %}
