mergecake renamed to cakemerge

--- a/src/mergecake/views/templates/base.html
+++ b/src/mergecake/views/templates/base.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Welcome to mergecake</title>
+  <title>Welcome to cakemerge</title>
   <!-- scripts and styles -->
-  {% style "/css/bootstrap-theme.min.css" %} 
-  {% style "/css/bootstrap.min.css" %} 
+  {% style "/css/bootstrap-theme.min.css" %}
+  {% style "/css/bootstrap.min.css" %}
   {% style "/css/screen.css" %}
   <script src="//code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
   {% script "/js/bootstrap.min.js" %}
@@ -18,7 +18,7 @@
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{{servlet-context}}/">mergecake</a>
+        <a class="navbar-brand" href="{{servlet-context}}/">cakemerge</a>
       </div>
       <div class="navbar-collapse collapse ">
         <ul class="nav navbar-nav">
