--- a/src/mergecake/views/templates/base.html
+++ b/src/mergecake/views/templates/base.html
@@ -39,7 +39,10 @@
     </div>
   </div>
 
-  <div class="container">{% block content %} {% endblock %}</div>
+  <div class="container">
+    {% block content %}
+    {% endblock %}
+  </div>
 </body>
 </html>
 
