--- a/src/mergecake/views/templates/register.html
+++ b/src/mergecake/views/templates/register.html
@@ -28,7 +28,7 @@
         <select id="user" name="user" class="form-control"> 
           {% for user in users %}
             {% ifequal params.user user.id %}
-              <option value="{{user.id}}">{{user.initials}}</option>
+              <option value="{{user.id}}" selected>{{user.initials}}</option>
             {% else %}
               <option value="{{user.id}}">{{user.initials}}</option>
             {% endifequal %}
