save entered user on conflict

--- a/src/mergecake/views/templates/register.html
+++ b/src/mergecake/views/templates/register.html
@@ -25,7 +25,7 @@
       <label class="col-md-4 control-label" for="user">Select
         your initials</label>
       <div class="col-md-4">
-        <input type="text" class="form-control" id="user" name="user"/>
+        <input type="text" class="form-control" id="user" name="user" value="{{params.user}}"/>
       </div>
     </div>
 
