accept user string from form rather than ID

--- a/src/mergecake/views/templates/register.html
+++ b/src/mergecake/views/templates/register.html
@@ -17,7 +17,8 @@
       <label class="col-md-4 control-label" for="user">Select
         your initials</label>
       <div class="col-md-4">
-        <input type="text" class="form-control" id="user" name="user" value="{{params.user}}"/>
+        <input type="text" class="form-control" id="user" name="user" 
+          value="{{params.user}}" autocomplete="off"/>
       </div>
     </div>
 
