--- a/src/mergecake/views/templates/receipt.html
+++ b/src/mergecake/views/templates/receipt.html
@@ -17,7 +17,7 @@
     <p>
   </div>
   <div class="col-md-4">
-    <p>{{params.projectname}}</p>
+    <p>{{params.cakeday.projectid}} - {{params.projectname}}</p>
   </div>
 </div>
 <div class="row">
