--- a/src/mergecake/views/templates/receipt.html
+++ b/src/mergecake/views/templates/receipt.html
@@ -26,7 +26,7 @@
 <div class="row">
   <label class="col-md-2 control-label">Date:</label>
   <div class="col-md-4">
-    <p>{{params.cakeday.date}}
+    <p>{{params.date}}
   </div>
 </div>
 <div class="row">
