--- a/src/mergecake/views/templates/base.html
+++ b/src/mergecake/views/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Welcome to cakemerge</title>
+  <title>Systematic Cake portal</title>
   <!-- scripts and styles -->
   {% style "/css/bootstrap-theme.min.css" %}
   {% style "/css/bootstrap.min.css" %}
@@ -18,7 +18,7 @@
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{{servlet-context}}/">cakemerge</a>
+        <a class="navbar-brand" href="{{servlet-context}}/">Cake portal</a>
       </div>
       <div class="navbar-collapse collapse ">
         <ul class="nav navbar-nav">
