changed jumbotron text

--- a/src/mergecake/views/templates/cakeday-base.html
+++ b/src/mergecake/views/templates/cakeday-base.html
@@ -2,13 +2,15 @@
 {% block content %}
 <div class="jumbotron">
 <h2>Cakedays</h2>
-<p>When registering to bring cake or another treat, you will be
-  informed on submitting if there is a conflict with a colleague who has
-  already committed to bringing cake on the requested date. You will
-  then have to choose another day.</p>
-<p>Successfully registered cakedays will result in an e-mail
-  being sent out to your colleagues at 10:00 on the date chosen. This is
-  to ensure that you follow through with your commitment.</p>
+<p>
+<ul style="font-size:21px; font-weight: 200;">
+<li>Choose the project and date where you want to bring a treat, this will be your "cakeday".</li>
+<li>If your chosen date conflicts with an existing cakeday, you will be asked to choose a different date.</li>
+<li>If there are no conflicts you will receive a receipt.</li>
+<li>When the day arrives, your colleagues will be informed via e-mail that you are bringing a treat.</li>
+</ul> 
+</p>
+<p><strong>NB!</strong> You can not delete a cakeday once registered and on conflicts you will not be informed who already registered the cakeday. These rules are in place to ensure the element of surprise.</p>
 </div>
 {% block cakeday-content %}
 {% endblock %} 
