--- a/src/mergecake/views/templates/base.html
+++ b/src/mergecake/views/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
   <title>Systematic Cake portal</title>
   <!-- scripts and styles -->
   {% style "/css/bootstrap-theme.min.css" %}
