--- a/resources/public/css/searchboxes.css
+++ b/resources/public/css/searchboxes.css
@@ -4,6 +4,12 @@
 	  background-color: #f5f5f5;
 }
 
+.ui-state-focus {
+	  text-decoration: none;
+	  color: #262626;
+	  background-color: #f5f5f5;
+}
+
 .ui-menu {
 	display: block;
 	top: 100%;
