--- a/src/mergecake/views/templates/base.html
+++ b/src/mergecake/views/templates/base.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container" style="padding-bottom: 150px;">
     {% block content %}
     {% endblock %}
   </div>
