Close datepicker when selecting a date
Change-Id: Ic7476c2b033e33e4faaf3472098b2da6cfc46138

--- a/src/mergecake/views/templates/register.html
+++ b/src/mergecake/views/templates/register.html
@@ -127,7 +127,10 @@ $(function() {
 	$(function() {
 		$('#date').datepicker({
 			format : 'dd-mm-yyyy'
-		});
+    });
+    $('#date').on('changeDate', function(ev){
+      $(this).datepicker('hide');
+    });
 	});
 </script>
 {% endblock %}
