--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -2,7 +2,9 @@ html,
 body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     height: 100%;
-    padding-top: 40px;
+	padding-top: 40px;
+	background-image: url('../img/background.png');
+	background-repeat: repeat;
 }
 
 .error {
